--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ body {
 	margin: 0 auto;
 	font-family: "Manrope", sans-serif;
 	font-size: 16px;
-  max-width: 1440px;
+	max-width: 1440px;
 }
 
 img {
-  display: block;
-  max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
 
 /* Header */
@@ -85,35 +85,78 @@ img {
 	top: 50%;
 	right: 0;
 	transform: translate(-25%, -50%);
-  width: 51px;
-  height: 52px;
+	width: 51px;
+	height: 52px;
 	padding: 7px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-
 /* Main */
+main {
+	background-color: #E5E5E5;
+}
+
 .recipes-list {
-  padding: 2rem;
+	padding: 3rem;
 }
 
 /* Card */
 .card {
-  width: 300px;
+	width: 380px;
+	background-color: #fff;
+	border-radius: 21px;
+	overflow: hidden;
+	box-shadow: 0 4px 34px 30px rgba(0, 0, 0, 0.2);
 }
 
-.ratio-box {
-  width: 100%;
-  height: 0;
-  padding-top: calc(100% * 3 / 4);
-  position: relative;
-  overflow: hidden;
-
+.card__image {
+	width: 100%;
+	height: 253px;
+	overflow: hidden;
+	object-fit: cover;
 }
 
-.ratio-box img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  object-fit: cover;
+.card__image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.card__content {
+	padding: 1rem 1rem 3rem;
+}
+
+.card__title {
+	font-family: "Anton", sans-serif;
+	font-size: 18px;
+}
+
+.card__subtitle {
+	font-size: 12px;
+	font-weight: 700;
+	color: var(--clr-grey-400);
+	text-transform: uppercase;
+}
+
+.ingredients-container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.ingredient {
+	width: 50%;
+	font-size: 14px;
+	display: flex;
+	flex-direction: column;
+}
+
+.ingredient__name {
+	font-weight: 500;
+}
+
+.ingredient__value {
+	color: var(--clr-grey-400);
 }
