--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,7 +262,8 @@ ul {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
 	gap: 3rem 0rem;
-	place-items: center;
+	justify-items: center;
+	align-items: start;
 }
 
 /* Card */
