--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,6 +165,8 @@ main {
 .dropdown-menu {
 	background-color: #fff;
 	position: absolute;
+	max-height: 240px;
+	overflow-y: scroll;
 	left: 0;
 	top: 100%;
 	width: 100%;
